fixing alignment

--- a/wp-content/themes/tri/css/less/styles.less
+++ b/wp-content/themes/tri/css/less/styles.less
@@ -328,7 +328,7 @@ body{
 			margin-right: 1.43rem;
 		}
 		&.alignright {
-			float: left;
+			float: right;
 			margin-left: 1.43rem;
 			margin-right: 0;
 		}
